--- a/matplotlib-challenge/pymaceuticals_final.ipynb
+++ b/matplotlib-challenge/pymaceuticals_final.ipynb
@@ -1396,6 +1396,7 @@
     "plt.xlabel('Timepoint (days)', fontsize=14)\n",
     "plt.ylabel('Tumor Volume (mm3)', fontsize=14)\n",
     "plt.title('Capomulin Treatment for Mouse w914', fontsize=16, fontweight= 'bold', color='m')\n",
+    "plt.grid()\n",
     "plt.show()"
    ]
   },
@@ -1512,7 +1513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
